[package]
name = "bevy_pg_calendar"
version = "1.0.11"
edition = "2021"
description = "PG (PatchGames) Calendar to be used with Bevy"
license = "MIT OR Apache-2.0"

[features]
default = ["calendar", "cron"]
cron = []
calendar = []

[dependencies]
bevy = { version = "0.14.0", default-features = false, features = []}
serde = {version="1.0.203", features = ["derive"] }
serde_json = {version="1.0.120"}
chrono = {version = "0.4.38", default-features = false, features = ["serde"]}

