[package]
name = "bevy_pg_calendar"
version = "1.0.16"
edition = "2021"
description = "PG (PatchGames) Calendar to be used with Bevy"
license = "MIT OR Apache-2.0"

[features]
default = ["calendar", "cron"]
cron = []
calendar = []

[dependencies]
bevy = {version = "0.16.0-rc.3", default-features = false, features = []}
serde = {version="1.0", features = ["derive"] }
serde_json = {version="1.0"}
chrono = {version = "0.4.40", default-features = false, features = ["serde"]}
